# hypr-switcher

./: .gitignore  CMakeLists.txt  README.md
src/: main.cpp  make.sh
